# video-skill

./: .gitignore  AGENTS.md  README.md  SKILL.md  artist_portrait_editor_revision5_optimized.md  pyproject.toml  run_checks.py  skill-package.json
agents/: openai.yaml
docs/: ACCEPTANCE_TESTS_V0.md  CLI_SPEC.md  CREATIVE_GRAMMAR.md  CURRENT_BATCH.md  DATA_CONTRACTS.md  DECISIONS.md  DEVELOPMENT_PROGRESS.md  ENGINEERING_SPEC_V0.md  ISSUES.md  MODEL_BOUNDARIES.md  NON_GOALS.md  PRODUCT_SPEC_V0.md  RELEASES.md  STAGE_A_ACCEPTANCE.md  STATE_AND_INVALIDATION.md  V0_002A_MEDIA_SCAN.md  V0_002B_MEDIA_SCAN_ACCEPTANCE.md  V0_002C_SOURCES_CSV_IMPORT.md  V0_002D_RESCAN_IDENTITY.md  V0_002E_SUPERSEDES.md  V0_002F_MINIMAL_MATERIAL_MAP.md  V0_002G_MINIMAL_PROJECT_REVIEW.md  V0_002H_STATUS_DASHBOARD.md  V0_002I_RUN_REPORT_REFRESH.md  V0_002J_FOUNDATION_CHECKS.md  V0_002K_INVALID_LEDGER_HANDLING.md  V0_002L_ATOMIC_REPORT_WRITES.md  V0_002M_ARTIFACT_CONSISTENCY.md  V0_002N_DOCTOR_DIAGNOSTICS.md  V0_002O_SKILL_METADATA.md  V0_002P_SKILL_PACKAGE_PREFLIGHT.md  V0_002Q_SKILL_PACKAGE_POLICY.md  V0_002R_CANONICAL_INSTALL_SIMULATION.md  V0_002S_RELEASE_READINESS.md  V0_003_MEDIA_SCAN_FOUNDATION.md  V0_003_RELEASE_READINESS.md  V0_004_RELEASE_READINESS.md  V0_004_SEGMENTATION_FOUNDATION.md  V0_005_RELEASE_READINESS.md  V0_005_SCENE_SEGMENTATION_GATE.md  (+36 more)
schemas/: acceptance_repair_approval_record.schema.json  acceptance_repair_approval_request.schema.json  acceptance_repair_execution_bundle.schema.json  acceptance_repair_execution_dry_run.schema.json  acceptance_repair_plan.schema.json  (+104 more)
(+180 files in other folders)
